# tricritical-ising

./: .gitignore  README.md  coset-characters-dev.ipynb
.github/ISSUE_TEMPLATE/: study.md
Panos-gruntowrk/lie-calculations/: character-pullback.nb
Panos-gruntowrk/optimization/: a.out
Panos/bootstrap/: folded-modular-data.jl  m-su2-S.m  math4ti2.m  modular-bootstrap.nb
Panos/ising-invariance/: cft.py  ising-defect-action.ipynb
Panos/lie-calculations/: caerful-bootstrap.nb  character-pullback.nb  defects-bootstrap.nb  ising-test.nb  math4ti2.m  modular-bootstrap.nb  weights.txt
Panos/optimization/: coset-characters-dev.ipynb
Python-Optimization/: flintest.c
Quinten/: C3-Diagonal-Coset.ipynb  NIM-irreps-C3_2.sobj  S-C3-dcoset.sobj  T_dcoset.sobj  TriCritical Ising Squared.ipynb  all_algebras.sobj  all_c_7over5_cosets.m  all_c_7over5_cosets.sobj  finding-new-cfts.ipynb  invariant-algebra-characters.sobj  m-dcoset-sp6-S.m  m-dcoset-sp6-T.m  m-dcoset-sp6-conformal-weights.m  m-su2-E6.m  mM.m  mS.m  modular-bootstrap.ipynb  su2-dcoset-chars.sobj  tricritical-ising-squared-characters.sobj
cftpy/: .gitignore  pyproject.toml  setup.py
cftpy/cftpy/: __init__.py  cft.py  cythonft.pyx
lie-calculations/: character-pullback.nb  conformal-weights.py  coset-partition-function.nb  string-functions.py
notes/: coset_characters.md  fixed_point_algebra.md  gruntwork-for-branching-rules.nb  ising-calculation.md  ising_invariance.md
optimization/: coset-characters-dev.ipynb
partition-functions/: Untitled.ipynb
tising/: partition-function.nb
(+2 files in other folders)
